[tool.poetry]
name = "chunkdot"
version = "0.3.0"
description = "Multi-threaded matrix multiplication and cosine similarity calculations."
authors = ["Rodrigo Agundez <rragundez@gmail.com>"]
readme = "README.md"
repository = "https://github.com/rragundez/chunkdot"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numba = "^0.57.0"
numpy = "^1.23"
scipy = "^1.10.1"
numba-progress = "^0.0.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.1"
black = "^23.1.0"
pylint = "^2.16.4"
pandas = "^1.5.3"
pytest = "^7.2.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-x --log-cli-level=INFO"
testpaths = [
    "tests",
]

[tool.pylint.messages_control]
max-line-length = 100
max-args = 10
disable = [
  "missing-module-docstring",
  "logging-fstring-interpolation",
  "too-many-locals",
]
