[tool.poetry]
name = "chunkdot"
version = "0.6.0"
description = "Multi-threaded matrix multiplication and cosine similarity calculations."
authors = ["Rodrigo Agundez <rragundez@gmail.com>"]
readme = "README.md"
repository = "https://github.com/rragundez/chunkdot"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numba = "^0.57.0"
numpy = "^1.23"
scipy = "^1.10.1"
numba-progress = "^0.0.4"
ruff = "^0.2.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.1"
pylint = "^2.16.4"
pandas = "^1.5.3"
pytest = "^7.2.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "D",  # pydocstyle
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
]
ignore = [
  "D104",  # undocumented-public-package
  "D100",  # undocumented-public-module
  "D107",  # undocumented-public-init
]
pydocstyle.convention = "google"
pylint.max-args = 10

[tool.pytest.ini_options]
addopts = "-x --log-cli-level=INFO"
testpaths = [
    "tests",
]
